--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="right">
         <img src="images/pic.jpg" alt="display picture">
         <h3>Ammu</h3>
-        <button style="color:red" type="button" name="button">dynamic resume</button>
+        <button style="color:red" onclick="window.location='dynamic.html'">dynamic resume</button>
       </div>
     </div>
 
