--- a/static.html
+++ b/static.html
@@ -9,7 +9,7 @@
   <body>
     <div class="parent">
       <div class="leftchild">
-        <img src="images/profile.png" alt="display picture">
+        <img src="images/pic.jpg" alt="display picture">
         <h3 style="color:blue">Amrutha</h3>
         <p>+91-9876543543</p>
         <a href="mailto:amruthasai@gmail.com">amruthasai@gmail.com</a>
@@ -48,7 +48,7 @@
   <td>2015</td>
   </tr>
   </table>
-</div>        
+</div>
 <h3 style="color:violet">TECHNICALSKILLS</h3>
 <hr>
 <h3>PROGRAMMING LANGUAGES:</h3>
